// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpdateBar should match snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <UpdateView
    isUpdating={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <CSSTransitionGroup
        component={Symbol(react.fragment)}
        transitionAppear={false}
        transitionAppearTimeout={0}
        transitionEnter={true}
        transitionEnterTimeout={250}
        transitionLeave={true}
        transitionLeaveTimeout={250}
        transitionName="slide"
      >
        <ForwardRef>
          Updating!
        </ForwardRef>
      </CSSTransitionGroup>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <ForwardRef>
          Updating!
        </ForwardRef>,
        "component": Symbol(react.fragment),
        "transitionAppear": false,
        "transitionAppearTimeout": 0,
        "transitionEnter": true,
        "transitionEnterTimeout": 250,
        "transitionLeave": true,
        "transitionLeaveTimeout": 250,
        "transitionName": "slide",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Updating!",
        },
        "ref": null,
        "rendered": "Updating!",
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "UpdateText-lwqm3z-0",
            "isStatic": true,
            "rules": Array [
              "padding:1rem;text-align:center;font-size:1.5rem;font-weight:bold;background:red;",
            ],
          },
          "displayName": "UpdateText",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "UpdateText-lwqm3z-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        },
      },
      "type": [Function],
    },
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "SladeYTransition-lwqm3z-1",
        "isStatic": true,
        "rules": Array [
          "position:absolute;top:0;left:0;right:0;.slide-appear,.slide-enter{transform:translateY(-100%);}.slide-appear.slide-appear-active,.slide-enter.slide-enter-active{transform:translateY(0);transition:transform 250ms ease-out;}.slide-leave{transform:translateY(0);}.slide-leave.slide-leave-active{transform:translateY(-100%);transition:transform 250ms ease-out;}",
        ],
      },
      "displayName": "SladeYTransition",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "SladeYTransition-lwqm3z-1",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <CSSTransitionGroup
          component={Symbol(react.fragment)}
          transitionAppear={false}
          transitionAppearTimeout={0}
          transitionEnter={true}
          transitionEnterTimeout={250}
          transitionLeave={true}
          transitionLeaveTimeout={250}
          transitionName="slide"
        >
          <ForwardRef>
            Updating!
          </ForwardRef>
        </CSSTransitionGroup>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <ForwardRef>
            Updating!
          </ForwardRef>,
          "component": Symbol(react.fragment),
          "transitionAppear": false,
          "transitionAppearTimeout": 0,
          "transitionEnter": true,
          "transitionEnterTimeout": 250,
          "transitionLeave": true,
          "transitionLeaveTimeout": 250,
          "transitionName": "slide",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Updating!",
          },
          "ref": null,
          "rendered": "Updating!",
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "UpdateText-lwqm3z-0",
              "isStatic": true,
              "rules": Array [
                "padding:1rem;text-align:center;font-size:1.5rem;font-weight:bold;background:red;",
              ],
            },
            "displayName": "UpdateText",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "UpdateText-lwqm3z-0",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        },
        "type": [Function],
      },
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "SladeYTransition-lwqm3z-1",
          "isStatic": true,
          "rules": Array [
            "position:absolute;top:0;left:0;right:0;.slide-appear,.slide-enter{transform:translateY(-100%);}.slide-appear.slide-appear-active,.slide-enter.slide-enter-active{transform:translateY(0);transition:transform 250ms ease-out;}.slide-leave{transform:translateY(0);}.slide-leave.slide-leave-active{transform:translateY(-100%);transition:transform 250ms ease-out;}",
          ],
        },
        "displayName": "SladeYTransition",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "SladeYTransition-lwqm3z-1",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`UpdateBar should match snapshot 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <UpdateView
    isUpdating={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <CSSTransitionGroup
        component={Symbol(react.fragment)}
        transitionAppear={false}
        transitionAppearTimeout={0}
        transitionEnter={true}
        transitionEnterTimeout={250}
        transitionLeave={true}
        transitionLeaveTimeout={250}
        transitionName="slide"
      />,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": false,
        "component": Symbol(react.fragment),
        "transitionAppear": false,
        "transitionAppearTimeout": 0,
        "transitionEnter": true,
        "transitionEnterTimeout": 250,
        "transitionLeave": true,
        "transitionLeaveTimeout": 250,
        "transitionName": "slide",
      },
      "ref": null,
      "rendered": false,
      "type": [Function],
    },
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "SladeYTransition-lwqm3z-1",
        "isStatic": true,
        "rules": Array [
          "position:absolute;top:0;left:0;right:0;.slide-appear,.slide-enter{transform:translateY(-100%);}.slide-appear.slide-appear-active,.slide-enter.slide-enter-active{transform:translateY(0);transition:transform 250ms ease-out;}.slide-leave{transform:translateY(0);}.slide-leave.slide-leave-active{transform:translateY(-100%);transition:transform 250ms ease-out;}",
        ],
      },
      "displayName": "SladeYTransition",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "SladeYTransition-lwqm3z-1",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <CSSTransitionGroup
          component={Symbol(react.fragment)}
          transitionAppear={false}
          transitionAppearTimeout={0}
          transitionEnter={true}
          transitionEnterTimeout={250}
          transitionLeave={true}
          transitionLeaveTimeout={250}
          transitionName="slide"
        />,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": false,
          "component": Symbol(react.fragment),
          "transitionAppear": false,
          "transitionAppearTimeout": 0,
          "transitionEnter": true,
          "transitionEnterTimeout": 250,
          "transitionLeave": true,
          "transitionLeaveTimeout": 250,
          "transitionName": "slide",
        },
        "ref": null,
        "rendered": false,
        "type": [Function],
      },
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "SladeYTransition-lwqm3z-1",
          "isStatic": true,
          "rules": Array [
            "position:absolute;top:0;left:0;right:0;.slide-appear,.slide-enter{transform:translateY(-100%);}.slide-appear.slide-appear-active,.slide-enter.slide-enter-active{transform:translateY(0);transition:transform 250ms ease-out;}.slide-leave{transform:translateY(0);}.slide-leave.slide-leave-active{transform:translateY(-100%);transition:transform 250ms ease-out;}",
          ],
        },
        "displayName": "SladeYTransition",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "SladeYTransition-lwqm3z-1",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
